style: fix bog post width on mobile

--- a/src/components/entities/blog/article.module.scss
+++ b/src/components/entities/blog/article.module.scss
@@ -4,4 +4,8 @@
   & h2:first-child {
     display: none;
   }
+
+  & pre {
+    white-space: pre-wrap;
+  }
 }
